--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -57,16 +57,22 @@
               </span>
             </div>
             <div class="message-body">
-              <figure class="image" style="margin-left: auto;margin-right: auto;">
-                <img src="{{ asset('files/images/' ~ post.image) }}"><br>
-              </figure>
+                {% if post.image %}
+                <figure class="image" style="margin-left: auto;margin-right: auto;">
+                    <img src="{{ asset('files/images/' ~ post.image) }}"><br>
+                </figure>
+                {% else %}
+                <figure class="image is-3by1">
+                    <img src="https://bulma.io/images/placeholders/720x240.png" alt="">
+                </figure>
+                {% endif %}
               <em>{{ post.publicationDate.format('H:i:s \o\n l jS F Y') }}
               </em><br>
               {{ post.content }}
               <br><br>
-              <div class="field is-grouped">
-                <p class="control">
-                  <a class="button is-dark
+
+              <div class="buttons is-right">
+                  <a class="button is-dark is-right
                     {% if (loop.length == 1)
                     or (loop.length > 1 and post.isPinned() and posts[0].getPublicationDate() > posts[1].getPublicationDate())
                     or (( not posts[0].isPinned() ) and loop.index0 == 0)
@@ -76,7 +82,6 @@
                     href="{{ path('post_show', {'slug': post.slug}) }}">
                     View article >>
                   </a>
-                </p>
               </div>
             </div>
           </article>
