--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -2,112 +2,117 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Blog{% endblock %}
+{% block title %}{{post_name}}{% endblock %}
 
 {% block body %}
-  <script>
-  function switchVisiblity() {
+<section class="section">
+    <div class="columns is-mobile">
+        <div class="column is-three-fifths is-offset-one-fifth">
+            <div class="tile is-ancestor">
+                <article class="tile is-child box">
+                    <p class="title">{{post_name}}</p>
+                    {% if post_image %}
+                    <figure class="image" style="margin-left: auto;margin-right: auto;">
+                        <img src="{{ asset('files/images/' ~ post_image) }}"><br>
+                    </figure>
+                    {% else %}
+                    <figure class="image is-3by1">
+                        <img src="https://bulma.io/images/placeholders/720x240.png" alt="">
+                    </figure>
+                    {% endif %}
+
+                    <p align="right">{{post_pub_date}}</p>
+                    <div class="content">
+                        <p>{{post_content}}</p>
+                    </div>
+
+                    {% for remark in remarks %}
+                    <br>
+                    <div class="card" >
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-left">
+                                    <figure class="image is-48x48">
+                                        <img src="https://st2.depositphotos.com/1007566/11574/v/950/depositphotos_115748074-stock-illustration-executive-businessman-profile-isolated-icon.jpg" alt="Placeholder image">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <p class="title is-4" style="float: left;">John Smith</p>
+                                    <span style="float: right;">
+                                        <a style="padding-right: 15px" href="{{ path('remark_edit', {'id':remark.id}) }}">
+                                            <i class="fas fa-edit"></i>
+                                        </a>
+                                        <a href="{{ path('remark_delete', {'id': remark.id}) }}">
+                                            <i class="far fa-times-circle"></i>
+                                        </a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="content" >
+                                <p style="word-break: break-all;width:70%;text-align: justify;text-justify: inter-word;">
+                                    {{ remark.message }}
+                                </p>
+                                <br>
+                                <div align="right">{{ remark.publicationDate.format('H:i:s \o\n l jS F Y')  }}</div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+
+                    <br>
+
+                    <button class="field is-grouped control button is-dark" onclick="switchVisiblity()">remark</button>
+
+                    <div id="remarkForm" style="display:none;">
+                        {{ form_start(form)  }}
+
+                        <div class="field">
+                            <label class="label">My remark</label>
+                            <div class="control" >
+                                {{ form_widget(form.message, { 'attr': {'class': 'textarea'} }) }}
+                            </div>
+                        </div>
+                        <br>
+                        <div class="control">
+                            {{ form_row(form.submit, { 'label': 'Submit me', 'attr': {'class': 'button is-link'}}) }}
+                        </div>
+                        {{ form_end(form)  }}
+                    </div>
+                </article>
+            </div>
+
+            <div class="field is-grouped">
+                <p class="control">
+                    <a class="button is-dark" {%if slug_previous != null %}
+                    href="{{ path('post_show', {'slug': slug_previous}) }}"
+                    {% else %} style="visibility: hidden;"{% endif %}
+                    >
+                        Previous
+                    </a>
+                    <a class="button is-dark" href="{{ path('index') }}">
+                        Back
+                    </a>
+                    <a class="button is-dark" {%if slug_next != null %}
+                    href="{{ path('post_show', {'slug': slug_next}) }}"
+                    {% else %} style="visibility: hidden;"{% endif %}
+                    >
+                        Next
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<script>
+function switchVisiblity() {
     var isVisible = document.getElementById("remarkForm").style.display == "block";
 
-    if(isVisible){
-      document.getElementById("remarkForm").style.display = "none";
-    }else{
-      document.getElementById("remarkForm").style.display = "block";
+    if (isVisible) {
+        document.getElementById("remarkForm").style.display = "none";
+    } else {
+        document.getElementById("remarkForm").style.display = "block";
     }
-  }
-  </script>
-  {{ form_start(form)  }}
-  <section class="section">
-    <div class="container">
-      <h1 class="title">Post {{ id }}</h1>
-
-      <div class="tile is-ancestor">
-        <div class="tile is-parent">
-          <div class="tile is-child box">
-            <p class="title">{{post_name}}</p>
-            <figure class="image" style="margin-left: auto;margin-right: auto;">
-              <img src="{{ asset('files/images/' ~ post_image) }}"><br>
-            </figure>
-            <div>
-              <p>{{post_content}}</p>
-              <p align="right">{{post_pub_date}}</p>
-            </div>
-            {% for remark in remarks %}
-            <br>
-              <div class="card" >
-
-                <div class="card-content">
-                  <div class="media">
-                    <div class="media-left">
-                      <figure class="image is-48x48">
-                        <img src="https://st2.depositphotos.com/1007566/11574/v/950/depositphotos_115748074-stock-illustration-executive-businessman-profile-isolated-icon.jpg" alt="Placeholder image">
-                      </figure>
-                    </div>
-                    <div class="media-content">
-                        <p class="title is-4" style="float: left;">John Smith</p>
-                        <span style="float: right;">
-                            <a style="padding-right: 15px" href="{{ path('remark_edit', {'id':remark.id}) }}">
-                              <i class="fas fa-edit"></i>
-                            </a>
-                            <a href="{{ path('remark_delete', {'id': remark.id}) }}">
-                              <i class="far fa-times-circle"></i>
-                            </a>
-                        </span>
-
-                    </div>
-                  </div>
-
-                  <div class="content" >
-                    <p style="word-break: break-all;width:70%;text-align: justify;text-justify: inter-word;">
-                      {{ remark.message }}
-                    </p>
-                    <br>
-                    <div align="right">{{ remark.publicationDate.format('H:i:s \o\n l jS F Y')  }}</div>
-                  </div>
-                </div>
-              </div>
-
-            {% endfor %}
-
-            <br>
-
-            <button class="field is-grouped control button is-dark" onclick="switchVisiblity()">remark</button>
-
-            <div id="remarkForm" style="display:none;">
-              <div class="field">
-                <label class="label">My remark</label>
-                <div class="control" >
-                    {{ form_widget(form.message, { 'attr': {'class': 'textarea'} }) }}
-                </div>
-              </div>
-              <br>
-              <div class="control">
-                {{ form_row(form.submit, { 'label': 'Submit me', 'attr': {'class': 'button is-link'}}) }}
-              </div>
-            </div>
-          </div>
-        </div>
-
-    </div>
-    <div class="field is-grouped">
-      <p class="control">
-        <a class="button is-dark" {%if slug_previous != null %}
-          href="{{ path('post_show', {'slug': slug_previous}) }}"
-          {% else %} style="visibility: hidden;"{% endif %}
-        >
-          Previous
-        </a>
-        <a class="button is-dark" href="{{ path('index') }}">
-          Back
-        </a>
-        <a class="button is-dark" {%if slug_next != null %}
-          href="{{ path('post_show', {'slug': slug_next}) }}"
-          {% else %} style="visibility: hidden;"{% endif %}
-        >
-          Next
-        </a>
-      </p>
-  </div>
-  </section>
-  {{ form_end(form)  }}
+}
+</script>
 {% endblock %}
