--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -1,60 +1,70 @@
-{# templates/blog/postDetail.html.twig #}
+{# templates/post/create.html.twig #}
 
 {% extends 'base.html.twig' %}
-
 
 {% block title %} Your new post {% endblock %}
 
 {% block body %}
-
 <div class="content">
-<h1 class="title">New Post</h1>
-    {{ form_start(form)  }}
-    <section class="form">
-      <div class="field">
-        <label class="label">Title</label>
-        <div class="control">
-            {{ form_widget(form.name, { 'attr': {'class': 'input'} }) }}
-            {% if error is defined %}
+    <section class="form section">
+        <h2 class="title">New post</h1>
+        {{ form_start(form)  }}
+        <div class="field">
+            <label class="label">Title</label>
+            <div class="control">
+                {{ form_widget(form.name, { 'attr': {'class': 'input'} }) }}
+                {% if error is defined %}
                 <ul>
                     <li>{{ error.message }}</li>
                 </ul>
-            {% endif %}
+                {% endif %}
+            </div>
         </div>
-      </div>
 
-      <div class="field">
-        <label class="label">Content</label>
-        <div class="control ">
-            {{ form_widget(form.content, { 'attr': {'class': 'textarea'} }) }}
+        <div class="field">
+            <label class="label">Content</label>
+            <div class="control ">
+                {{ form_widget(form.content, { 'attr': {'class': 'textarea'} }) }}
+            </div>
         </div>
-      </div>
 
-      <div class="field is-grouped">
-        <div class="control">
-          {{ form_row(form.submit, { 'label': 'Publish', 'attr': {'class': 'button is-link'}}) }}
+        <div class="field">
+            <div id="post-image" class="file has-name is-fullwidth">
+                <label class="file-label">
+                    {{ form_widget(form.image, { 'attr': {'class': 'file-input', 'name':'resume'}}) }}
+                    <span class="file-cta">
+                        <span class="file-icon">
+                            <i class="fas fa-upload"></i>
+                        </span>
+                        {{ form_label(form.image, form.image, {'label_attr': {'class': 'file-label'}}) }}
+                    </span>
+                    <span class="file-name">
+                      No file uploaded
+                    </span>
+                </label>
+            </div>
         </div>
-        <div class="control">
-          <a class="button is-link is-light" href="{{ path('index') }}">
-            Cancel
-          </a>
+
+        <div class="field is-grouped">
+            <div class="control">
+                {{ form_row(form.submit, { 'label': 'Publish', 'attr': {'class': 'button is-link'}}) }}
+            </div>
+            <div class="control">
+                <a class="button is-link is-light" href="{{ path('index') }}">
+                    Cancel
+                </a>
+            </div>
         </div>
-      </div>
-
-      <div class="file has-name is-right">
-      <label class="file-label">
-        {{ form_widget(form.image, { 'attr': {'class': 'file-input'} }) }}
-
-        <span class="file-cta">
-          <span class="file-icon">
-            <i class="fas fa-upload"></i>
-          </span>
-          {{ form_label(form.image,form.image ,{ 'label_attr': {'class': 'file-label'} }) }}
-        </span>
-
-      </label>
-    </div>
+        {{ form_end(form) }}
     </section>
-    {{ form_end(form) }}
 </div>
+<script>
+const fileInput = document.querySelector('#post-image input[type=file]');
+fileInput.onchange = () => {
+    if (fileInput.files.length > 0) {
+        const fileName = document.querySelector('#post-image .file-name');
+        fileName.textContent = fileInput.files[0].name;
+    }
+}
+</script>
 {% endblock %}
