wysiwyg editor with FOS CKEditorType bundle

--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -7,7 +7,7 @@
 
 {% block body %}
 
-<h1 class="title">Update Post</h1>
+<h1 class="title">Update post</h1>
 
 {{ form_start(form)  }}
 <section class="form">
