--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -66,9 +66,8 @@
                     <img src="https://bulma.io/images/placeholders/720x240.png" alt="">
                 </figure>
                 {% endif %}
-              <em>{{ post.publicationDate.format('H:i:s \o\n l jS F Y') }}
-              </em><br>
-              {{ post.content }}
+                <br>
+              {{ post.content | raw }}
               <br><br>
 
               <div class="buttons is-right">
