--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -13,17 +13,17 @@
                     <p class="title">{{post_name}}</p>
                     {% if post_image %}
                     <figure class="image" style="margin-left: auto;margin-right: auto;">
-                        <img src="{{ asset('files/images/' ~ post_image) }}"><br>
+                        <img src="{{ asset('files/images/' ~ post_image) }}" alt="{{ post_image }}"><br>
                     </figure>
                     {% else %}
                     <figure class="image is-3by1">
-                        <img src="https://bulma.io/images/placeholders/720x240.png" alt="">
+                        <img src="https://bulma.io/images/placeholders/720x240.png" alt="placeholder">
                     </figure>
                     {% endif %}
 
                     <p align="right">{{post_pub_date}}</p>
                     <div class="content">
-                        <p>{{post_content}}</p>
+                        <p>{{ post_content | raw }}</p>
                     </div>
 
                     {% for remark in remarks %}
