--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -12,6 +12,7 @@
   <section class="section">
     <div class="columns is-mobile">
       <div class="column is-three-fifths is-offset-one-fifth">
+        {% if app.user %}
         <div class="field is-grouped">
           <p class="control">
             <a class="button is-dark" href="{{ path('post_create') }}">
@@ -19,6 +20,7 @@
             </a>
           </p>
         </div>
+        {% endif %}
 
         {% for post in posts %}
           <article
