Fork between blogs

--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -12,7 +12,7 @@
         <header>
             <nav class="navbar is-light" role="navigation" aria-label="main navigation">
               <div class="navbar-brand">
-                <a class="navbar-item" href="{{ url('index') }}">
+                <a class="navbar-item" href="{{ url('login') }}">
                     Blog
                 </a>
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBlog">
