--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -62,7 +62,7 @@
                 {{ form_row(form.submit, { 'label': 'Update', 'attr': {'class': 'button is-link'}}) }}
             </div>
             <div class="control">
-                <a class="button is-link is-light" href="{{ path('index') }}">
+                <a class="button is-link is-light" href="{{ path('index', {'username': username}) }}">
                     Cancel
                 </a>
             </div>
