--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -12,7 +12,7 @@
   <section class="section">
     <div class="columns is-mobile">
       <div class="column is-three-fifths is-offset-one-fifth">
-        {% if app.user %}
+        {% if app.user and app.user.username == blogname %}
         <div class="field is-grouped">
           <p class="control">
             <a class="button is-dark" href="{{ path('post_create') }}">
@@ -42,6 +42,7 @@
               {% endif %}">
 
               <p>{{ post.name }}</p>
+              {% if app.user and app.user.username == blogname %}
               <span>
                 <a style="padding-right: 15px" href="{{ path('post_pinned', {'id': post.id}) }}">
                   {% if post.isPinned() %}
@@ -57,6 +58,7 @@
                   <i class="far fa-times-circle"></i>
                 </a>
               </span>
+              {% endif %}
             </div>
             <div class="message-body">
                 {% if post.image %}
