--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -38,6 +38,7 @@
                                 </div>
                                 <div class="media-content">
                                     <p class="title is-4" style="float: left;">{{users[remark.userID-1].username}}</p>
+                                    {% if app.user and app.user.id == remark.getUserID() %}
                                     <span style="float: right;">
                                         <a style="padding-right: 15px" href="{{ path('remark_edit', {'id':remark.id}) }}">
                                             <i class="fas fa-edit"></i>
@@ -46,6 +47,7 @@
                                             <i class="far fa-times-circle"></i>
                                         </a>
                                     </span>
+                                    {% endif %}
                                 </div>
                             </div>
                             <div class="content" >
