Specification of the name of the current blog

--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
   <section class="section">
     <div class="container">
-      <h1 class="title">Welcome on our wonderful blog</h1>
+      <h1 class="title">Welcome on {{blogname}} blog !!</h1>
     </div>
   </section>
 
