--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -24,7 +24,7 @@
         <div class="field">
             <label class="label">Content</label>
             <div class="control ">
-                {{ form_widget(form.content) }}
+                {{ form_widget(form.content, { 'attr': {'class': 'textarea'}}) }}
             </div>
         </div>
 
