View modification for reuse login

--- a/templates/bundles/FOSUserBundle/Security/login.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login.html.twig
@@ -3,5 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block fos_user_content %}
+  <section class="section">
     {{ include('@FOSUser/Security/login_content.html.twig') }}
+  </section>
 {% endblock fos_user_content %}
