--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -63,7 +63,7 @@
             <div class="message-body">
                 {% if post.image %}
                 <figure class="image" style="margin-left: auto;margin-right: auto;">
-                    <img src="{{ asset('files/images/' ~ post.image) }}"><br>
+                    <img src="{{ post.image }}"><br>
                 </figure>
                 {% else %}
                 <figure class="image is-3by1">
