--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -13,7 +13,7 @@
                     <p class="title">{{post_name}}</p>
                     {% if post_image %}
                     <figure class="image" style="margin-left: auto;margin-right: auto;">
-                        <img src="{{ asset('files/images/' ~ post_image) }}" alt="{{ post_image }}"><br>
+                        <img src="{{ post_image }}" alt="{{ post_image }}"><br>
                     </figure>
                     {% else %}
                     <figure class="image is-3by1">
