--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -20,24 +20,22 @@
         </div>
 
         <div class="field">
-            <label class="label">Message</label>
+            <label class="label">Description</label>
             <div class="control ">
-                {{ form_widget(form.content) }}
+                {{ form_widget(form.content, { 'attr': {'class': 'textarea'}}) }}
             </div>
         </div>
 
+        {% if post_image %}
         <div class="field">
             <label class="label">Current image : </label>
-            {% if post_image %}
+
             <figure class="image" style="margin-left: auto;margin-right: auto;">
-                <img src="{{ asset('files/images/' ~ post_image) }}"><br>
+                <img src="{{ post_image }}"><br>
             </figure>
-            {% else %}
-            <figure class="image is-3by1">
-                <img src="https://bulma.io/images/placeholders/720x240.png" alt="">
-            </figure>
-            {% endif %}
+
         </div>
+        {% endif %}
         <br>
 
         <div class="field">
