--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,7 +1,6 @@
 {# templates/header.html.twig #}
 
 <nav class="navbar is-light" role="navigation" aria-label="main navigation">
-
     <div class="navbar-brand">
         <a class="navbar-item"  width="112" height="28" href="
           {% if app.user %}
@@ -11,7 +10,7 @@
           {% endif %}">
             Blog
         </a>
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBlog">
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBlog">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
@@ -19,20 +18,20 @@
     </div>
 
     <div id="navbarBlog" class="navbar-menu">
-      <div class="navbar-start">
-          <div class="navbar-item">
-            <div class="buttons">
+        <div class="navbar-start">
+            <div class="navbar-item">
                 {{ render(controller('App\\Controller\\PostController::searchAction')) }}
             </div>
-          </div>
         </div>
 
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
                     {% if app.user %}
+                    <p>Logged in as <b>{{app.user.username}}</b> &nbsp;&nbsp;</p>
+
                     <a class="button is-primary" href="{{ path('logout') }}">
-                        <strong>Log out {{app.user.username}}</strong>
+                        <b>Log out</b>
                     </a>
                     {% elseif not app.user %}
                     <a class="button is-primary" href="{{ path('register') }}">
