--- a/templates/home/searchBar.html.twig
+++ b/templates/home/searchBar.html.twig
@@ -1,10 +1,8 @@
-{{ form_start(form,
-  {'attr':{'action': path('handleSearch')}})}}
-
-<div class="has-addons " style="display: flex;justify-content:flex-start;" >
+{{ form_start(form, {'attr': {'action': path('handleSearch') }}) }}
+<div class="has-addons field">
   <div class="control">
     {{ form_widget(form.search,{
-      'attr' : {'class':'input','placeholder': 'Search a blog'},
+      'attr' : {'class':'input','placeholder': 'Enter the name of a blog'},
     })}}
   </div>
   <div class="control">
