--- a/templates/post/homepage.html.twig
+++ b/templates/post/homepage.html.twig
@@ -2,36 +2,35 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Homepage{% endblock %}
+{% block title %} Home {% endblock %}
 
 {% block body %}
 {% trans_default_domain 'FOSUserBundle' %}
 
-<section class="columns is-desktop " style="
-    margin: 8% 0em;
-    height: 100%;
-    ">
+<section class="content">
+    <br><br>
+    <div class="container">
+        <div class="columns">
+            <div class="column" style="text-align: center;">
+                <h1 class="title">Which blog would you like to visit ?</h1>
 
-  <div class="column is-two-fifths " style="
-    text-align: center;
-    ">
-    <h1 class="title">Do you want to visit a blog ?</h1>
+                <div style="overflow: auto;max-height: 15em;">
+                    {% for user in users %}
+                    <a
+                      class="button is-rounded is-info is-outlined"
+                      style="margin: 0em auto 1em;width:50%; "
+                      href="{{ path('index', {'username': user.username}) }}">
+                        {{user.username}}
+                    </a>
+                    {% endfor %}
+                </div>
+            </div>
 
-    <div style="overflow: auto;max-height: 15em;">
-      {% for user in users %}
-        <a
-          class="button is-rounded is-info is-outlined"
-          style="margin: 0em auto 1em;width:50%; "
-          href="{{ path('index', {'username': user.username}) }}">
-            {{user.username}}
-        </a>
-      {% endfor %}
+            <div class="column" >
+                {{ render(controller('App\\Controller\\PostController::loginAction')) }}
+            </div>
+        </div>
     </div>
-  </div>
-
-  <div class="column" >
-    {{ render(controller('App\\Controller\\PostController::loginAction')) }}
-  </div>
 </section>
 
 {% endblock %}
