Update style and blog comprehension

--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -14,7 +14,7 @@
             <div class="column" style="text-align: center;">
                 <h1 class="title">Which blog would you like to visit ?</h1>
 
-                <div style="overflow: auto;max-height: 15em;">
+                <div style="overflow: auto;">
                     {% for user in users %}
                     <a
                       class="button is-rounded is-info is-outlined"
