--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -52,7 +52,7 @@
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="button is-link" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+                    <input class="button is-link grey-hover" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
                 </div>
             </div>
         </form>
