--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,20 +1,35 @@
 .subtitle, h1, h2 {
-  text-align: center;
+    text-align: center;
 }
 
 html, body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .content {
-  flex: 1 0 auto;
+    flex: 1 0 auto;
+}
+
+.grey-hover {
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+    background-color: #F5F5F5;
+    transition: all 200ms ease-out;
+}
+
+.grey-hover:hover {
+    box-shadow: 0 0 7px rgba(100, 0, 0, 0.3);
+}
+
+a.post-action {
+    text-decoration: none;
 }
 
 footer {
-  flex-shrink: 0;
+    flex-shrink: 0;
 }
