--- a/templates/bundles/FOSUserBundle/Security/login_content_ext.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content_ext.html.twig
@@ -48,9 +48,15 @@
                     </label>
                 </div>
             </div>
+            <br>
             <div class="field">
                 <div class="control">
-                    <input class="button is-link" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+                    <input
+                        class="button is-link grey-hover is-fullwidth is-outlined"
+                        type="submit"
+                        id="_submit"
+                        name="_submit"
+                        value="{{ 'security.login.submit'|trans }}" />
                 </div>
             </div>
         </form>
