--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,8 +8,8 @@
         <title>{% block title %} Welcome! {% endblock %}</title>
         {% block stylesheets %}
             <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
             <link rel="stylesheet/less" type="text/css" href="{{ asset('less/styles.less') }}" />
+            <link rel="stylesheet" href="{{ asset('css/bulma_styles.css') }}">
             <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
         {% endblock %}
     </head>
