--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -2,7 +2,7 @@
 <div class="content has-text-centered">
     <p>
         <strong>Symfony blog</strong> by
-        <a href="https://github.com/cmamon">Christophe QUENETTE</a> and
-        <a href="https://github.com/stremor-03">Sullyvan TREMOR</a>.
+        <a class="is-family-code" href="https://github.com/cmamon">Christophe QUENETTE</a> and
+        <a class="is-family-code" href="https://github.com/stremor-03">Sullyvan TREMOR</a> .
     </p>
 </div>
