--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -11,23 +11,31 @@
     <br><br>
     <div class="container">
         <div class="columns">
-            <div class="column" style="text-align: center;">
-                <h1 class="title">Which blog would you like to visit ?</h1>
+            <div class="column" >
+                <div class="columns is-mobile is-centered">
+                    <div class="column is-half">
+                        <h1 class="title">Which blog would you like to visit ?</h1>
 
-                <div style="overflow: auto;">
-                    {% for user in users %}
-                    <a
-                      class="grey-hover button is-rounded is-info is-outlined is-family-code "
-                      style="margin: 0em auto 1em;width:50%; "
-                      href="{{ path('index', {'username': user.username}) }}">
-                        {{user.username}}
-                    </a>
-                    {% endfor %}
+                        <div class="buttons" style="overflow: auto;">
+
+                            {% for user in users %}
+                            <a
+                              class="grey-hover button is-rounded is-info is-outlined is-family-code is-fullwidth"
+                              href="{{ path('index', {'username': user.username}) }}">
+                                {{user.username}}
+                            </a>
+                            {% endfor %}
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="column" >
-                {{ render(controller('App\\Controller\\PostController::loginAction')) }}
+                <div class="columns is-mobile is-centered">
+                  <div class="column is-half">
+                      {{ render(controller('App\\Controller\\PostController::loginAction')) }}
+                  </div>
+                </div>
             </div>
         </div>
     </div>
