--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -5,7 +5,7 @@
 {% block title %}{{post_name}}{% endblock %}
 
 {% block body %}
-<section class="section">
+<section class="section content">
     <div class="columns is-mobile">
         <div class="column is-three-fifths is-offset-one-fifth">
             <div class="tile is-ancestor">
@@ -86,16 +86,16 @@
 
             <div class="field is-grouped">
                 <p class="control">
-                    <a class="button is-dark" {%if slug_previous != null %}
+                    <a class="button is-dark is-family-monospace" {%if slug_previous != null %}
                     href="{{ path('post_show', {'slug': slug_previous}) }}"
                     {% else %} style="visibility: hidden;"{% endif %}
                     >
                         Previous
                     </a>
-                    <a class="button is-dark" href="{{ path('index', {'username': blogname}) }}">
+                    <a class="button is-dark is-family-monospace" href="{{ path('index', {'username': blogname}) }}">
                         Back
                     </a>
-                    <a class="button is-dark" {%if slug_next != null %}
+                    <a class="button is-dark is-family-monospace" {%if slug_next != null %}
                     href="{{ path('post_show', {'slug': slug_next}) }}"
                     {% else %} style="visibility: hidden;"{% endif %}
                     >
