--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -60,7 +60,7 @@
                 {{ form_row(form.submit, { 'label': 'Update', 'attr': {'class': 'button is-link'}}) }}
             </div>
             <div class="control">
-                <a class="button is-link is-light" href="{{ path('index', {'username': username}) }}">
+                <a class="button is-danger is-light" href="{{ path('index', {'username': username}) }}">
                     Cancel
                 </a>
             </div>
